--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
       max-file-size: 300MB  #文件上传大小限制为500kb
       max-request-size: 300MB #请求大小限制为500kb
 bocim:
-
-  openaiApiKey: ${OPEN_KEY}
+  openaiApiKey: ${OPEN_KEY:testfor}
 #  openaiMode: gpt-3.5-turbo
   openaiMode: ${OPEN_MODE:gpt-3.5-turbo}
   apiWebsite: https://api.openai.com/v1/chat/completions
+  bocimKey: ${BOCIM_KEY:bocim0524}
